--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,5 +1,5 @@
 ---
-  import { Icon } from 'astro-icon';
+  import { Icon } from 'astro-icon/components';
 ---
 <button id="theme-toggle-button" class="py-2 px-3 text-black dark:text-white border-y-4 border-transparent
   hover:border-y-4 hover:border-lt-purple dark:hover:border-dk-blue-light
