--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,23 +12,8 @@ import { Image } from 'astro:assets';
   </div>
   <div class="md:flex md:justify-between max-w-[1500px] mx-auto">
     <div class="flex items-center">
-      <span class="logo-dark mr-2.5">
-        <Image
-          src="/sm-logo-darkblue.png"
-          alt=""
-          width={35}
-          height={27}
-          aria-hidden="true"
-        />
-      </span>
-      <span class="logo-light mr-4">
-        <Image
-          src="/sm-logo-lightblue.png"
-          alt=""
-          width={35}
-          height={27}
-          aria-hidden="true"
-        />
+      <span aria-hidden="true" class="font-title inline-block mr-4 text-lt-blue-dark dark:text-dk-blue-light">
+        SK
       </span>
       <a
         href="https://sanna.ninja"
@@ -39,23 +24,8 @@ import { Image } from 'astro:assets';
       </a>
     </div>
     <div class="flex items-center">
-      <span class="logo-dark mr-2.5">
-        <Image
-          src="/sm-logo-darkblue.png"
-          alt=""
-          width={35}
-          height={27}
-          aria-hidden="true"
-        />
-      </span>
-      <span class="logo-light mr-4">
-        <Image
-          src="/sm-logo-lightblue.png"
-          alt=""
-          width={35}
-          height={27}
-          aria-hidden="true"
-        />
+      <span aria-hidden="true" class="font-title inline-block mr-4 text-lt-blue-dark dark:text-dk-blue-light">
+        SK
       </span>
       <a
         href="https://a11y.sanna.ninja/en"
