--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -15,7 +15,7 @@ import '@fontsource/lato';
 ---
 <html lang="en">
   <head>
-    <title>{ title } | Blog - Sanna Mäkinen</title>
+    <title>{ title } | Blog - Sanna Kramsi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content={ title } />
@@ -44,7 +44,7 @@ import '@fontsource/lato';
           <a href="/" class="inline-block border-y-4 border-transparent p-4
             hover:border-y-4 hover:border-lt-purple dark:hover:border-dk-blue-light
             focus:outline focus:outline-2 focus:outline-offset-4 	focus:outline-black dark:focus:outline-white">
-            <span class="block text-2xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Mäkinen <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
+            <span class="block text-2xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Kramsi <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
             <span class="block text-lg mt-2 font-title leading-none text-blue-tory dark:text-lt-perfume dark:text-shadow-text">A peek into my life</span>
         </a>
         </div>
