Fix the breadcrumb on the cats page

--- a/src/pages/cats.astro
+++ b/src/pages/cats.astro
@@ -73,7 +73,7 @@ const otherBlogsContent = otherBlogsJson.data;
 ---
 
 <Layout title={ frontContent.page.title } metaDescription={ frontContent.page.metaDescription }
-  currentType="front" currentUrl="/cats"
+  currentUrl="/cats"
 >
   <div class="max-w-[1564px] mx-auto md:px-8-px">
     <div class="text-lt-gray dark:text-dk-gray py-2 px-4-px max-w-xl mx-auto md:py-6 md:px-8-px lg:max-w-4xl">
