Updates and font change

--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -8,8 +8,8 @@ import { Image } from 'astro:assets';
 
 const { title, currentUrl, currentSlug, metaDescription, mainImage, authorImage, authorName, authorContent, categoryURL, categoryName } = Astro.props
 
-import '@fontsource/rock-salt';
-import '@fontsource/average-sans';
+import '@fontsource/satisfy';
+import '@fontsource/atkinson-hyperlegible';
 import '@fontsource/lato';
 
 ---
@@ -47,8 +47,8 @@ import '@fontsource/lato';
           <a href="/" class="inline-block border-y-4 border-transparent p-4
             hover:border-y-4 hover:border-lt-purple dark:hover:border-dk-blue-light
             focus:outline focus:outline-2 focus:outline-offset-4 	focus:outline-black dark:focus:outline-white">
-            <span class="block text-2xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Kramsi <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
-            <span class="block text-lg mt-2 font-title leading-none text-blue-tory dark:text-lt-perfume dark:text-shadow-text">A peek into my life</span>
+            <span class="block text-3xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Kramsi <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
+            <span class="block text-xl mt-2 font-title leading-none text-blue-tory dark:text-lt-perfume dark:text-shadow-text">A peek into my life</span>
         </a>
         </div>
       </div>
@@ -80,7 +80,7 @@ import '@fontsource/lato';
                   class="rounded-full mx-auto"
                 />
               </div>
-              <span class="font-title text-xl">{ authorName }</span>
+              <span class="font-title text-2xl">{ authorName }</span>
               <div class="text-lg max-w-xl mx-auto"><Fragment set:html={ authorContent } /></div>
             </div>
           </article>
