--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,8 +7,8 @@ import Footer from '../components/Footer.astro';
 
 const { title, currentUrl, currentSlug, metaDescription, currentType } = Astro.props
 
-import '@fontsource/rock-salt';
-import '@fontsource/average-sans';
+import '@fontsource/satisfy';
+import '@fontsource/atkinson-hyperlegible';
 import '@fontsource/lato';
 
 ---
