--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,8 +46,8 @@ import '@fontsource/lato';
           <a href="/" class="inline-block border-y-4 border-transparent p-4
             hover:border-y-4 hover:border-lt-purple dark:hover:border-dk-blue-light
             focus:outline focus:outline-2 focus:outline-offset-4 	focus:outline-black dark:focus:outline-white">
-            <span class="block text-2xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Kramsi <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
-            <span class="block text-lg mt-2 font-title leading-none text-blue-tory dark:text-lt-perfume dark:text-shadow-text">A peek into my life</span>
+            <span class="block text-3xl font-title text-black dark:text-white dark:text-shadow-text">Sanna Kramsi <span class="text-blue-tory dark:text-lt-perfume">-</span> Blog</span>
+            <span class="block text-xl mt-2 font-title leading-none text-blue-tory dark:text-lt-perfume dark:text-shadow-text">A peek into my life</span>
         </a>
         </div>
       </div>
