Color contrast tweaks

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -5,7 +5,7 @@ const categoryURL = Astro.props.categoryURL;
 const categoryName = Astro.props.categoryName;
 ---
 
-<nav aria-label="Breadcrumbs" class="col-span-2 w-full max-w-[1564px] p-4-px pb-0 mx-auto text-lt-gray dark:text-white md:px-8-px text-base">
+<nav aria-label="Breadcrumbs" class="col-span-2 w-full max-w-[1564px] p-4-px pb-0 mx-auto text-lt-gray dark:text-dk-gray md:px-8-px text-base">
   <ul class="block list-none m-0 p-0">
     <li class="inline">
       <a href="/" class="underline underline-offset-4 decoration-2 text-lt-blue-dark dark:text-dk-blue-light hover:text-lt-purple hover:decoration-4 dark:hover:text-wheat focus:text-black dark:focus:text-white focus:outline focus:outline-2 focus:outline-offset-8 focus:no-underline focus:outline-black dark:focus:outline-white">
