--- a/src/pages/accessibility.astro
+++ b/src/pages/accessibility.astro
@@ -77,8 +77,8 @@ const otherBlogsContent = otherBlogsJson.data;
 >
   <div class="max-w-[1564px] mx-auto md:px-8-px">
     <div class="text-lt-gray dark:text-dk-gray py-2 px-4-px max-w-xl mx-auto md:py-6 md:px-8-px lg:max-w-4xl">
-      <h1 id="skip-target" class="block px-4-px font-bold text-center mt-8 lg:mt-16 mb-4 lg:mb-8 text-4xl md:text-6xl text-lt-gray dark:text-white">{ frontContent.page.title }</h1>
-      <div class="mx-4-px lead-content text-xl text-center mb-6 lg:mb-12 text-lt-gray dark:text-white"><Fragment set:html={ frontContent.page.content } /></div>
+      <h1 id="skip-target" class="block px-4-px font-bold text-center mt-8 lg:mt-16 mb-4 lg:mb-8 text-4xl md:text-6xl text-lt-gray-heading dark:text-dk-gray-heading">{ frontContent.page.title }</h1>
+      <div class="mx-4-px lead-content text-xl text-center mb-6 lg:mb-12 text-lt-gray dark:text-dk-gray"><Fragment set:html={ frontContent.page.content } /></div>
     </div>
   </div>
 
