Change the bg for posts

--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -138,7 +138,7 @@ import '@fontsource/lato';
   }
 
   .light {
-    @apply bg-white;
+    @apply bg-lt-bg;
   }
   .dark {
     @apply bg-dk-blue-darkest;
