--- a/src/layouts/LayoutPost.astro
+++ b/src/layouts/LayoutPost.astro
@@ -30,6 +30,7 @@ import '@fontsource/lato';
     <meta property="og:image" content={ mainImage } />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:url" content={`https://blog.sanna.ninja${currentUrl}/`} />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <link rel="shortcut icon" href="/favicons/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
