Fix the A11ying url

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@ import { Image } from 'astro:assets';
     </div>
     <div class="flex items-center">
       <a
-        href="https://a11y.sanna.ninja/en"
+        href="https://a11y.ing/en"
         rel="noopener noreferrer"
         class="font-light"
       >
