Add the site name into the title

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import '@fontsource/lato';
 ---
 <html lang="en">
   <head>
-    <title>{ title }</title>
+    <title>{ title } | Blog - Sanna Kramsi</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content={ title } />
