--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,6 +48,7 @@ import { Icon } from 'astro-icon/components';
           </ul>
         </nav>
       </div>
+    </div>
   </div>
   <script is:inline src="/skip-content.js"></script>
 </footer>
