Change a footer logo link text

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@ import { Icon } from 'astro-icon/components';
         rel="noopener noreferrer"
         class="font-light"
       >
-        My portfolio
+        About me
       </a>
     </div>
     <div class="flex items-center">
