feat(Url update): Update the sanna.ninja to the new subdomain

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ import { Icon } from 'astro-icon/components';
   <div class="md:flex md:justify-between max-w-[1500px] mx-auto">
     <div class="flex items-center">
       <a
-        href="https://sanna.ninja"
+        href="https://sanna.a11y.ing"
         rel="noopener noreferrer"
         class="font-light"
       >
